# solana-rps-game

./: .gitignore  .replit  README.md  cleanup_commands.sh  package-lock.json  package.json  restructure_commands.sh  setup_commands.sh  terminal  terminal_commands.sh
.github/workflows/: deploy.yml
backend/backend/solana-program/: Cargo.toml
backend/backend/solana-program/src/: game_logic.rs  lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/assets/: TransportWebHID-Bm078IT9.js.map  index-CxFqE1oR.js  index-CxFqE1oR.js.map  vendor-D44yUz92.js.map
frontend/deployment/: financial-test.html  index.html  test.html
frontend/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  start-server.js  vite.config.ts
frontend/public/: 404.html  buffer-check.js
frontend/src/: App.css  App.tsx  buffer-check.js  rps-client.ts  types.ts
solana-deploy/assets/: TransportWebHID-CkfFrGMW.js  TransportWebHID-CkfFrGMW.js.map  buffer-ClfaVKLN.js  index-Bnf7HS16.js.map  v4-CtRu48qb.js.map
solana-rps-deploy/: index.html  package.json
solana-rps-deploy-new/: index.html  netlify.toml
solana-rps-deploy-new/assets/: buffer-ClfaVKLN.js.map  index-Bnf7HS16.js  index-lBUBF3dD.js.map  solana-CpPL8tnJ.js
solana-rps-deploy/assets/: TransportWebHID-BqqH1jaY.js  TransportWebHID-BqqH1jaY.js.map  index-CDx_QL7R.js.map  index-E2FfCpCT.js  (+1 more)
solana-rps-game/: .gitignore  README.md
solana-rps-game-backup/: .env
solana-rps-game-new/: README.md
testing/: package.json
(+82 files in other folders)
